2008-09-03  Satoshi Konno <skonno@cybergarage.org>
	* Changed to include <TargetConditionals.h> in <typedef.h> on XCode as default.
	* Enabled SO_REUSEPORT in cg_socket_setreuseaddress() on MacOSX and iPhone platforms.
	* Disabled signal in cg_thread_stop_with_cond() on MacOSX and iPhone platforms.
	* Enabled libxml2 as default using TARGET_OS_IPHONE macro on iPhone and iPhone-Simulator.
	* Added cg_xml_node_copy().

2008-08-21  Satoshi Konno <skonno@cybergarage.org>
	* Fixed some warnings using GCC v4.0.1.
	* Added the following macros.
	  cg_string_getintvalue()
	  cg_string_getlongvalue()
	  cg_xml_node_getintvalue()
	  cg_xml_node_getlongvalue()
	  cg_xml_node_getchildnodeintvalue()
	  cg_xml_node_getchildnodelongvalue()
	* Changed the following functions to return an integer value instead of a string.
	  cg_upnp_icon_getwidth()
	  cg_upnp_icon_getheight()
	  cg_upnp_icon_getdepth()
	
2008-06-06  Satoshi Konno <skonno@cybergarage.org>
	* v2.2.

2008-05-24  Satoshi Konno <skonno@cybergarage.org>
	* Added cg_xml_nodelist_getbyname() instead of cg_xml_nodelist_get().
	* Added cg_xml_node_getchildnodebyname() instead of cg_xml_node_getchildnode().
	* Deprecated cg_xml_nodelist_get() and cg_xml_node_getchildnode().
	* Added support to include <expat/expat.h>.
	* Added a sample for UPnP/AV, upnpavdump, to parser the content lists of the media servers. 
	* Added a sample for UPnP/IGD, upnpigddump, to show the status parser of the internet gateway devices. 
	
2008-05-14  Satoshi Konno <skonno@cybergarage.org>
	* Changed typedef.h about BOOL type using Objective-C for XCode.
	* Changed cg_cond_signal() using SetEvent() instead of WaitForSingleObject() for WIN32 platform.
	* Fixed cg_xml_parse() not to abort when the data is null or the length less than zero.
	* Enabled cg_net_gethostinterfaces() for MacOSX in cinterface_function.c using __APPLE_CC_ macro.

2008-04-22  Satoshi Konno <skonno@cybergarage.org>