@@ -1,4 +1,9 @@
-2008-09-03  Satoshi Konno <skonno@cybergarage.org>
+2008-09-09 Satoshi Konno <skonno@cybergarage.org>
+	* Fixed the following methods correctly
+	  cg_upnp_device_setmanufacture() -> cg_upnp_device_setmanufacturer()
+	  cg_upnp_device_getmanufacture() -> cg_upnp_device_getmanufacturer()
+	  cg_upnp_device_setmanufactureurl() -> cg_upnp_device_setmanufacturerurl()
+	  cg_upnp_device_getmanufactureurl() -> cg_upnp_device_getmanufacturerurl()
 	* Changed to include <TargetConditionals.h> in <typedef.h> on XCode as default.
 	* Enabled SO_REUSEPORT in cg_socket_setreuseaddress() on MacOSX and iPhone platforms.
 	* Disabled signal in cg_thread_stop_with_cond() on MacOSX and iPhone platforms.
